[gd_scene load_steps=10 format=3 uid="uid://b6tdhrydlfoms"]

[ext_resource type="Texture2D" uid="uid://csh0txe6je5y4" path="res://bg.png" id="1_7jktm"]
[ext_resource type="Script" uid="uid://ds0dom8mff0yw" path="res://game.gd" id="1_ryrav"]
[ext_resource type="PackedScene" uid="uid://cgow6l3gs0c2t" path="res://player.tscn" id="2_ryrav"]
[ext_resource type="Script" uid="uid://26crx2h4i2h3" path="res://enemy_spawner.gd" id="3_eow3j"]
[ext_resource type="PackedScene" uid="uid://b5nge5taonj3m" path="res://enemy.tscn" id="4_j5wjh"]

[sub_resource type="FontVariation" id="FontVariation_0fjt0"]
variation_embolden = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_ryrav"]
font = SubResource("FontVariation_0fjt0")
font_size = 25

[sub_resource type="FontVariation" id="FontVariation_3ilyb"]
variation_embolden = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_eow3j"]
font = SubResource("FontVariation_3ilyb")
font_color = Color(1, 0.533333, 0.533333, 1)

[node name="Game" type="Node2D"]
script = ExtResource("1_ryrav")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(13, 0)
motion_scale = Vector2(0.38, 0.38)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(381, 112)
texture = ExtResource("1_7jktm")
region_enabled = true
region_rect = Rect2(0, 0, 3000, 2995)

[node name="EnemySpawner" type="Node2D" parent="."]
script = ExtResource("3_eow3j")
enemy_scene = ExtResource("4_j5wjh")

[node name="MovingArea" type="ReferenceRect" parent="EnemySpawner"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
border_color = Color(0, 0, 0, 1)
border_width = 2.0
editor_only = false
metadata/_edit_use_anchors_ = true

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="TimerSpawner" type="Timer" parent="."]

[node name="TimerInitial" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="InitialMovingArea" type="ReferenceRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -152.0
offset_right = 150.0
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2
border_color = Color(0.960784, 0, 0, 1)
border_width = 2.0
editor_only = false
metadata/_edit_use_anchors_ = true

[node name="Player" parent="." instance=ExtResource("2_ryrav")]

[node name="CameraGame" type="Camera2D" parent="Player"]
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Leaderboard" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="CanvasLayer/Leaderboard"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -158.0
offset_top = 10.0
offset_right = 159.0
offset_bottom = 114.0
grow_horizontal = 2

[node name="Infos" type="Label" parent="CanvasLayer/Leaderboard/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -145.0
offset_top = 7.0
offset_right = 145.0
offset_bottom = 42.0
grow_horizontal = 2
text = "Informations générales"
label_settings = SubResource("LabelSettings_ryrav")
horizontal_alignment = 1

[node name="Joueurs" type="Label" parent="CanvasLayer/Leaderboard/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -139.0
offset_top = 42.2857
offset_right = 139.0
offset_bottom = 68.2857
grow_horizontal = 2
text = "Préparez-vous !"
label_settings = SubResource("LabelSettings_eow3j")
horizontal_alignment = 1

[node name="Status" type="Label" parent="CanvasLayer/Leaderboard/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -139.0
offset_top = 69.1429
offset_right = 139.0
offset_bottom = 95.1429
grow_horizontal = 2
text = "La partie va démarrer dans "
label_settings = SubResource("LabelSettings_eow3j")
horizontal_alignment = 1

[connection signal="timeout" from="TimerSpawner" to="EnemySpawner" method="_on_timer_spawner_timeout"]
[connection signal="timeout" from="TimerInitial" to="." method="_on_timer_initial_timeout"]
